# pv_bess

./: CLAUDE.md  FIXES.md  pyproject.toml
output/Smoke_Test/: Smoke_Test_cashflows.csv  Smoke_Test_dispatch_sample.csv  Smoke_Test_grid_search.csv  Smoke_Test_monte_carlo.csv  Smoke_Test_summary.csv
pv_bess_model/: __init__.py  main.py
pv_bess_model/bess/: __init__.py  battery.py  replacement.py
pv_bess_model/config/: __init__.py  defaults.py  loader.py  schema.py
pv_bess_model/dispatch/: __init__.py  engine.py  optimizer.py
pv_bess_model/finance/: __init__.py  cashflow.py  costs.py  debt.py  inflation.py  metrics.py  tax.py
pv_bess_model/market/: __init__.py  eeg.py  ppa.py  price_loader.py
pv_bess_model/optimization/: __init__.py  grid_search.py  monte_carlo.py
pv_bess_model/output/: __init__.py  csv_writer.py  formatting.py
pv_bess_model/pv/: __init__.py  degradation.py  pvgis_client.py  timeseries.py
pv_bess_model/scenarios/: example_eeg_green.json  example_ppa_floor_grey.json  example_regelenergie.json  smoke_test.json
pv_bess_model/scenarios/data/: smoke_test_prices.csv
pv_bess_model/tests/: __init__.py  conftest.py  test_battery.py  test_cashflow.py  test_costs.py  test_debt.py  test_degradation.py  test_eeg.py  test_engine.py  test_grid_search.py  test_loader.py  test_metrics.py  test_monte_carlo.py  test_optimizer.py  test_ppa.py  test_price_loader.py  test_pvgis_client.py  test_schema.py  test_timeseries.py
