[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pv-bess-model"
version = "0.1.0"
description = "PV + BESS Co-Location Financial Model"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "numpy-financial>=1.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "requests>=2.28",
    "jsonschema>=4.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["pv_bess_model/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
